--- a/src/app/view-table/view-table.component.html
+++ b/src/app/view-table/view-table.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-lg-2">
         <input type="text"
-        placeholder="Search Task" [ngModel]="taskSearchTxt" class="form-control" id="searchTask" />
+        placeholder="Search Task" [(ngModel)]="taskSearchTxt" class="form-control" id="searchTask" />
     </div>
     <div class="col-lg-1">
         <label for="searchParentTask">Parent Task:</label>
